# pyproject.toml

[build-system]
requires      = ["setuptools>=61.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "distyll-info"
version = "0.0.1"
description = "Information digester assistant"
readme = "README.md"
authors = [{ name = "JP Hwang", email = "me@jphwang.com" }]
dependencies = [
    "weaviate-client", "pypdf", "beautifulsoup4", "yt-dlp", "pydub"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
include = ["distyll"]
