[tool.poetry]
name = "distyll-info"
version = "0.3.2"
description = "Information parsing assistant"
authors = ["JP Hwang <61258750+databyjp@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "distyll", from="src"}]

[tool.poetry.dependencies]
python = "^3.10"
pypdf = "^4.3.1"
openai = "^1.82.0"
pydub = "^0.25.1"
yt-dlp = "^2023.12.30"
moviepy = "^1.0.3"
beautifulsoup4 = "^4.13.4"
weaviate-client = "^4.14.4"
jupyter = "^1.1.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
